--- a/gsap/index.html
+++ b/gsap/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     
-    <title>Document</title>
+    <title>Design Hub</title>
 </head>
     <body>
         <section class="hero">
